Changelog
=========

2.0 (unreleased)
----------------

- Specified package dependencies.
  [hannosch]

- Removed `testfixture` extension profile from test setup, which had side
  effects on all other tests.
  [hannosch]

- Replaced direct invocations of interfaces with queryAdapter calls.
  The former does a suboptimal getattr call internally.
  [hannosch]

- Make use of new plone.app.layout context state view API for getting actions.
  [hannosch]

1.1.7 (unreleased)
------------------

- Made a test independent of an internal sort order.
  [hannosch]

- Escape the title of the defaultpage in the DisplayMenu.
  This fixes a potential xss attack and https://dev.plone.org/plone/ticket/8377
  [csenger]

- Added the prefix "folder-" to the CSS id of the folder part of the view contentmenu.
  This closes https://dev.plone.org/plone/ticket/8375
  [realefab]


1.1.6 (October 7, 2008)
-----------------------

- Fix on factories menu, showing constrain options only when there are 
  types to constrain. This closes http://dev.plone.org/plone/ticket/8213.
  [igbun]

- Fix non XML syntax compliant ids in contentmenus. This closes
  http://dev.plone.org/plone/ticket/8195
  [garbas,calvinhp]


1.1.5 (August 18th, 2008)
------------------

- Add a span with a "noMenuAction" class around disable menus, allowing them
  to be styled.
  [wichert]


1.1.3
-----

- Adjusted tests to reflect new behavior introduced by the last change.
  [hannosch]

- Do not show the display menu if it is disabled (i.e. there is an index_html
  item in the folder). The previous behavior was confusing for users: the
  description with the hint to remove the index_html object was never shown
  and users only got a unusable menu item. The new behavior makes the display
  menu consistent with other parts of the Plone UI.
  [wichert]

- Add an actionMenuSelected class to selected menu items so they can be
  styled (same class as used in Plone 2.5). Do not remove the <span>