@@ -1,1 +1,2 @@
-#
+from zope.i18nmessageid import MessageFactory
+PloneMessageFactory = MessageFactory('plone')
