@@ -4,6 +4,9 @@ Changelog
 2.0 (unreleased)
 ----------------
 
+- Use our own PloneMessageFactory.
+  [hannosch]
+
 - Specified package dependencies.
   [hannosch]
 
